--- a/src/component/diagram/TickType/TickType.css
+++ b/src/component/diagram/TickType/TickType.css
@@ -1,10 +1,17 @@
-.TickType.PROCESSOR, .TickType.EMPTY, .TickType.READ, .TickType.WRITE, .TickType.TRANSPORT, .TickType.RUN {
+.TickType.PROCESSOR, .TickType.EMPTY, .TickType.READ, .TickType.WRITE, .TickType.TRANSFER, .TickType.RUN, .TickType.WAITING {
     font-size: 20px;
     font-weight: bold;
-    padding: 10px 30px;
     margin: 0 5px;
     border-radius: 10px;
     min-width: 130px;
+    max-width: 130px;
+    min-height: 55px;
+    max-height: 55px;
+}
+
+.TickType.secondary.EMPTY, .TickType.secondary.READ, .TickType.secondary.WRITE, .TickType.secondary.TRANSFER, .TickType.secondary.RUN, .TickType.secondary.WAITING {
+    border-style: dashed !important;
+    cursor: pointer;
 }
 
 .TickType.PROCESSOR {
@@ -13,13 +20,13 @@
     padding: 10px 30px;
     margin: 0 5px;
     box-shadow: 0 0 20px 1px #ff6f0099;
-    border: 1px solid rgba(0, 0, 0, 0.2);
+    border: 3px solid rgba(0, 0, 0, 0.2);
 }
 
 .TickType.EMPTY {
     background-color: #bdbdbd;
     box-shadow: 0 0 20px 1px #bdbdbd99;
-    border: 1px solid rgba(0, 0, 0, 0.1);
+    border: 3px solid rgba(0, 0, 0, 0.1);
     opacity: 0.7;
 }
 
@@ -27,27 +34,34 @@
     background-color: #c0ca33;
     color: white;
     box-shadow: 0 0 20px 1px #c0ca33bb;
-    border: 1px solid rgba(0, 0, 0, 0.2);
+    border: 3px solid rgba(0, 0, 0, 0.2);
 }
 
 .TickType.WRITE {
     background-color: #e53935;
     color: white;
     box-shadow: 0 0 20px 1px #e53935bb;
-    border: 1px solid rgba(0, 0, 0, 0.2);
+    border: 3px solid rgba(0, 0, 0, 0.2);
 }
 
-.TickType.TRANSPORT {
+.TickType.TRANSFER {
     background-color: #039be5;
     color: white;
     font-size: 15px !important;
     box-shadow: 0 0 20px 1px #039be5bb;
-    border: 1px solid rgba(0, 0, 0, 0.2);
+    border: 3px solid rgba(0, 0, 0, 0.2);
 }
 
 .TickType.RUN {
     background-color: #0097a7;
     color: white;
     box-shadow: 0 0 20px 1px #0097a7bb;
-    border: 1px solid rgba(0, 0, 0, 0.2);
+    border: 3px solid rgba(0, 0, 0, 0.2);
+}
+
+.TickType.WAITING {
+    background-color: #f4511e;
+    color: white;
+    box-shadow: 0 0 20px 1px #f4511ebb;
+    border: 3px solid rgba(0, 0, 0, 0.2);
 }
